# k6-mcp

./: .dockerignore  .gitignore  .gitmodules  .golangci.yml  .goreleaser.yml  .mcp.json  CLAUDE.md  Dockerfile  README.md  docker-compose.chroma.yml  docker-compose.yml  embed.go  go.mod  go.sum  justfile  main.go  mcp-wrapper.sh  old-mcp.json
cmd/collecter/: main.go
cmd/full-text/: main.go
cmd/indexer/: main.go
cmd/k6-mcp/: build_error.go  main.go
cmd/prepare/: main.go
internal/: config.go
internal/buildinfo/: buildinfo.go
internal/docs/: errors.go  handler.go  parser.go  scanner.go
internal/handlers/: generate.go  handler.go  middleware.go  run.go  search_embedding.go  search_fulltext.go  terraform.go  validate.go
internal/handlers/templates/: generate_script.md
internal/logging/: helpers.go  logger.go
internal/runner/: runner.go
internal/search/: chroma.go  embedding.go  full-text.go  index.go  parser.go  search.go  sqlite.go
internal/security/: security.go
internal/validator/: validator.go
python-services/: embed_api.py  ingest.py  pyproject.toml  simple_test.py  test_metadata.py  verify_chroma.py
resources/: PRACTICES.md
resources/prompts/: generate_script.md
resources/templates/: terraform_load_test.tf.tmpl
scripts/: k6-script.js
test_scripts/: dangerous_test.js  invalid_test.js  run_basic_test.js  run_load_test.js  run_post_test.js  run_stages_test.js  valid_test.js
