[tool.poetry]
name = "python-services"
version = "0.1.0"
description = ""
authors = ["oleiade <theo@crevon.me>"]
readme = "README.md"
packages = [{include = "python_services"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.26"
langchain-community = "^0.3.26"
sentence-transformers = "^4.1.0"
chromadb = "^1.0.13"
flask = "^3.1.1"
unstructured = "^0.18.1"
markdown = "^3.8.2"
langchain-huggingface = "^0.3.0"
gitpython = "^3.1.40"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
